# SDS

./: .gitignore  CMakeLists.txt  sds.h  sds_Memory.c  sds_UI.h  sds_UIMain.h  sds_Window.c  sds_string.c  sds_vector.c
src/: sds.h  sds_Memory.c  sds_math.h  sds_string.c  sds_vector.c
src/math/: common.h  types.h  vec.h  vec2.c  vec3.c  vec4.c
